--- a/cookbook.org
+++ b/cookbook.org
@@ -162,6 +162,27 @@ Elements can be set with =setf=.
 #+RESULTS:
 : Name is Alex.  Age is 28.  Language: LISP
 
+* Strings
+
+Replace all instances of a substring within a string.
+
+#+BEGIN_SRC lisp
+(defun replace-all (string part replacement &key (test #'char=))
+  "Returns a new string in which all the occurences of the part
+is replaced with replacement."
+  (with-output-to-string (out)
+    (loop with part-length = (length part)
+       for old-pos = 0 then (+ pos part-length)
+       for pos = (search part string
+                         :start2 old-pos
+                         :test test)
+       do (write-string string out
+                        :start old-pos
+                        :end (or pos (length string)))
+       when pos do (write-string replacement out)
+       while pos)))
+#+END_SRC
+
 * File
 
 ** Read File
